[build-system]
requires = ["flit_core >=3.2,<4", "setuptools"]
build-backend = "flit_core.buildapi"

[project]
name = "logging-release"
authors = [{name = "Ke Ni, Xiaojie Qiu, Yan Zhang", email = "dummtindex@gmail.com"}]
readme = "README.md"
dynamic = ["version", "description"]

[tool.flit.module]
name = 'lack'