[metadata]
name = lack
version = attr: dynlog.__version__
author = Ke Ni, Xiaojie Qiu, Yang Zhang
author_email = dummtindex@gmail.com
url = https://github.com/aristoteleo/logging
description = A logging toolkit that provides log info for packages from Aristotle ecosystem and beyond
long_description = README.md
long_description_content_type = text/markdown
license = MIT
license_file = COPYING
# platform = any
keywords = logging
classifiers =
    Development Status :: Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Python Modules
project_urls = 
    Bug Tracker = https://github.com/aristoteleo/logging/issues
    # Changelog = https://github.com/aristoteleo/logging/blob/master/CHANGELOG.md
